XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Ports: Deprecated com.google.soap.search package, it's been discontinued 
  by Google
  (friebe)

Bugfixes
~~~~~~~~
- Fixed lang.reflect.Proxy class to not produce fatal errors when passed
  an empty array of interfaces to implement
  (friebe)
- Fixed common stack trace element calculation in lang.ChainedException
  if chained exception is a chained exception itself.
  (friebe)
- Fixed peer.ftp.FtpConnection to be able to cope with FTP servers
  sending an empty directory listing (without "." and "..") for 
  nonexistant directories
  (friebe)
- Fixed format string BIT_AND operator to only use one placeholder
  (ohinckel)

Features
~~~~~~~~
- Allowed changing contenttype to use others than multipart/mixed in
  peer.mail.MimeMessage
  (gellweiler)
- Refactored class loader implementations and extracted common code in
  all three implementations into an abstract base class
  (friebe)
- Ports: Added package org.codehaus.stomp
  (kiesel)
- Introduced new class loading exceptions, lang.ClassDependencyException 
  and lang.ClassLinkageException which inherit the existing 
  lang.ClassNotFoundException class.
  (kiesel)
- Made exception messages raised from injection more verbose in XPCLIs
  (friebe)
- Added support to peer.Socket::canRead() to block forever when NULL
  is passed as value for the timeout parameter.
  (friebe)
- Changed unittest.web.WebTestCase to load HTML from a stream instead
  of buffering it all into memory first
  (friebe)
- Log exceptions caught by web runner to scriptlet log
  (ohinckel)
  

Version 5.7.8, released 2010-03-24
----------------------------------
SVN version: 14410

Heads up!
~~~~~~~~~
- Changed xpcli runner to display exceptions raised in run() block of  
  the run command class including stacktrace
  (friebe)